--- a/index.html
+++ b/index.html
@@ -10,10 +10,24 @@
       img {
         max-width: 100%;
         vertical-align: top;
+        
+      }
+      img#responsive{
+        display : none;
+      }
+      @media screen and (max-wight: 768px){
+        img#responsive{
+          display: block;
+        }
       }
     </style>
   </head>
   <body>
-    <img src="nueva-version.jpg" alt="">
+    <img src="invie-responsive.png" alt="" id="responsive">
+    <img src="header.jpg" alt="">
+    <img src="hero.jpg" alt="">
+    <img src="acustica.jpg" alt="">
+    <img src="clasica.jpg" alt="">
+
   </body>
 </html>
